<resources>
    <string name="app_name">IvLine Reporting</string>
    <string name="login">Логин</string>
    <string name="password">Пароль</string>
    <string name="enter">Войти</string>
    <string name="select">Выбрать</string>
    <string name="date">Дата</string>
    <string name="Object">Объект</string>
    <string name="send">Отправить</string>
    <string name="work_report">Отчет о выполненной работе</string>
    <string name="working_hours_report">Отчет об отработанных часах</string>
    <string name="technique_report">Отчет о технике</string>
    <string name="back">Назад</string>
    <string name="settings">Настройки</string>
    <string name="logout">Выйти из аккаунта</string>
    <string name="exit">Выход из приложения</string>
    <string name="help">Помощь</string>
    <string name="open_nav">Открыть навигационную панель</string>
    <string name="close_nav">Закрыть навигационную панель</string>
    <string name="user">Пользователь:</string>
    <string-array name="time_types">
        <item>Рейсы</item>
        <item>Часы</item>
    </string-array>
    <string-array name="theme_entries">
        <item>Светлая</item>
        <item>Темная</item>
    </string-array>
    <string-array name="theme_values">
        <item>light</item>
        <item>dark</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="setting">Настройки</string>
    <string name="search_materials">Поиск материалов</string>
    <string name="search_technique">Поиск техники</string>
    <string name="search_work">Поиск работ</string>
    <string name="search_worker">Поиск сотрудника</string>
    <string name="type">Тип</string>
    <string name="employee">Сотрудник</string>
    <string name="technic">Техника</string>
    <string name="quantity">Кол.</string>
    <string name="hours">Часы</string>
</resources>