<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/nav_help"
        android:title="@string/help"
        android:icon="@drawable/baseline_help_24" />
    <item android:id="@+id/nav_settings"
        android:title="@string/settings"
        android:icon="@drawable/baseline_settings_24" />
    <item android:id="@+id/nav_logout"
        android:title="@string/logout"
        android:icon="@drawable/baseline_logout_24" />
    <item android:id="@+id/nav_exit"
        android:title="@string/exit"
        android:icon="@drawable/baseline_exit_to_app_24" />
    <item android:id="@+id/nav_theme_switch"
        android:title="Темная тема"

        app:actionViewClass="androidx.appcompat.widget.SwitchCompat"
        app:showAsAction="always" />
</menu>
